<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7D2E9"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle"
            android:text="@string/text_a" />

        <EditText
            android:id="@+id/edt_a"
            style="@style/EditStyle"
            android:background="@drawable/form_bg"
            android:hint="@string/hint_a_value"
            tools:ignore="Autofill" />

        <TextView
            style="@style/TextStyle"
            android:text="@string/text_b" />

        <EditText
            android:id="@+id/edt_b"
            style="@style/EditStyle"
            android:background="@drawable/form_bg"
            android:hint="@string/hint_b_value"
            tools:ignore="Autofill" />

        <TextView
            style="@style/TextStyle"
            android:text="@string/toleransi" />

        <EditText
            android:id="@+id/edt_tolerance"
            style="@style/EditStyle"
            android:background="@drawable/form_bg"
            android:hint="@string/hint_toleransi_value"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_show_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/button_bg"
            android:text="@string/tampilkan_hasil"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/hasil"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item" />

    </LinearLayout>

</ScrollView>